# V2I-GridCalib

./: README.md
V2I-GridCalib_ForRSU_ws/: README.md
V2I-GridCalib_ForRSU_ws/src/v2i_gridcalib_interfaces/: CMakeLists.txt  package.xml
V2I-GridCalib_ForRSU_ws/src/v2i_gridcalib_interfaces/srv/: RasterizePointCloud.srv
V2I-GridCalib_ForRSU_ws/src/v2i_gridcalib_rasterizer/: package.xml  setup.cfg  setup.py
V2I-GridCalib_ForRSU_ws/src/v2i_gridcalib_rasterizer/launch/: rasterizer.launch.py
V2I-GridCalib_ForRSU_ws/src/v2i_gridcalib_rasterizer/v2i_gridcalib_rasterizer/: rasterizer_node.py
