<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w.org/2001/XMLSchema"?>
<package format="3">
  <name>v2i_gridcalib_rasterizer</name>
  <version>1.0.0</version>
  <description>ROS2 node for distance-adaptive point cloud rasterization from the V2I-GridCalib paper.</description>
  <maintainer email="your_email@todo.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros2_numpy</exec_depend>
  <exec_depend>v2i_gridcalib_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>